selfhost/test/typechecker/invocation/error_instantiation_too_few_args.1.out
Error at %FILE_NAME%:3:12
Invalid instantiation
  |  val f = Foo(a: 123)
                ^
The following required fields are missing: 'b'
